force-app/main/default/objects/Fixture_Period__c/fields/Away_Score_Period__c.field-meta.xml
<CustomField>
    <fullName>Away_Score_Period__c</fullName>
    <label>Away Score Period</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>