force-app/main/default/objects/Fixture_Period__c/fields/Batting_Team__c.field-meta.xml
<CustomField>
    <fullName>Batting_Team__c</fullName>
    <label>Batting Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Away</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>