force-app/main/default/objects/Fixture_Period__c/fields/Home_Score_Period__c.field-meta.xml
<CustomField>
    <fullName>Home_Score_Period__c</fullName>
    <label>Home Score Period</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>