force-app/main/default/objects/Fixture_Period__c/fields/Period_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Period_Sequence__c</fullName>
    <label>Period Sequence</label>
    <type>AutoNumber</type>
    <displayFormat>SEQ-{0000}</displayFormat>
</CustomField>