force-app/main/default/objects/Fixture_Period__c/fields/Period_Stats_JSON__c.field-meta.xml
<CustomField>
    <fullName>Period_Stats_JSON__c</fullName>
    <label>Period Stats JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>