force-app/main/default/objects/Fixture_Period__c/fields/Time_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Time_Remaining__c</fullName>
    <label>Time Remaining</label>
    <length>20</length>
    <type>Text</type>
</CustomField>