force-app/main/default/objects/Fixture_Period__c/fields/Wickets__c.field-meta.xml
<CustomField>
    <fullName>Wickets__c</fullName>
    <label>Wickets</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>