force-app/main/default/objects/Fixture_Period__c/recordTypes/Period.recordType-meta.xml
<RecordType>
    <fullName>Period</fullName>
    <active>true</active>
    <label>Period</label>
</RecordType>