force-app/main/default/objects/Fixture_Period__c/recordTypes/Quarter.recordType-meta.xml
<RecordType>
    <fullName>Quarter</fullName>
    <active>true</active>
    <label>Quarter</label>
</RecordType>