force-app/main/default/objects/Fixture_Period__c/recordTypes/Round.recordType-meta.xml
<RecordType>
    <fullName>Round</fullName>
    <active>true</active>
    <label>Round</label>
</RecordType>