force-app/main/default/objects/Fixture_Period__c/recordTypes/Set.recordType-meta.xml
<RecordType>
    <fullName>Set</fullName>
    <active>true</active>
    <label>Set</label>
</RecordType>